@@ -43,12 +43,12 @@ public class CheckUpdatesTask<T extends LocalAddonFile> extends Task<List<LocalA
                                         Task.supplyAsync(() -> mod.checkUpdates(gameVersion, entry.getValue()))
                                                 .setSignificance(TaskSignificance.MAJOR)
                                                 .setName(String.format("%s (%s)", mod.getFileName(), entry.getKey())).withCounter("update.checking")
-                                ).toList()
+                                ).collect(Collectors.toList())
                 )
                 .collect(Collectors.toList());
 
         setStage("update.checking");
-        getProperties().put("total", dependents.size() * RemoteMod.Type.values().length);
+        getProperties().put("total", dependents.size() * repos.size());
     }
 
     @Override
